--- a/nova-aurelia-api/package.json
+++ b/nova-aurelia-api/package.json
@@ -20,7 +20,9 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
-    "mongoose": "^6.7.1"
+    "mongoose": "^6.7.1",
+    "swagger-autogen": "^2.23.5",
+    "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
     "jest": "^29.6.1",
